added prices and descriptions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "The-Store",
+  "name": "the-store",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -30,5 +29,6 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
-  }
+  },
+  "description": ""
 }
