--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
+    "url-parse": "^1.5.10",
     "uuid": "^9.0.1"
   },
   "description": ""
