--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
+    "react-paginate": "^8.2.0",
     "url-parse": "^1.5.10",
     "useref": "^1.4.4",
     "uuid": "^9.0.1"
