--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "firebase": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "react-paginate": "^8.2.0",
